--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="initial-scale=1.0"/>
-    <title>Interactive Wars of the Roses tree</title>
+    <meta name="viewport" content="width=device-width initial-scale=1.0"/>
+    <title>Wars of the Roses tree</title>
   </head>
   <body>
     <div id="root"></div>
