--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
       </div>
     </div>    
   </template>
+  <template id="rail-template">
+    <div id="scaling-parent">
+      <div class="horizontalLine" id="left-hand-part"></div>
+      <div class="verticalLine"></div>
+      <div class="horizontalLine" style="left:50%;" id="right-hand-part"></div>
+      <div class="horizontalLine" id="center-coverage"></div>
+    </div>    
+  </template>
   <template id="person-template">
       <div class="person lancaster">
         <div id="person-text">
